--- a/controller.yaml
+++ b/controller.yaml
@@ -3,12 +3,12 @@ removeStrategy:
   items: NONE
 items:
 - kind: folder
-  name: REPLACE_FOLDER_NAME
+  name: cb-fm-2
   groups:
   - members:
       users:
-      - REPLACE_GITHUB_USERNAME
-      - REPLACE_GITHUB_USERNAME-admin
+      - fss18
+      - fss18-admin
     roles:
     - name: browse
       grantedAt: current
@@ -20,12 +20,12 @@ items:
   - browse
   items:
   - kind: managedController
-    name: REPLACE_CONTROLLER_NAME
+    name: controller
     properties:
     - healthReporting:
         enabled: true
     - configurationAsCode:
-        bundle: REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME
+        bundle: cb-fm-2-controller
     configuration:
       kubernetes:
         memory: 4000
@@ -33,7 +33,7 @@ items:
         clusterEndpointId: default
         disk: 10
         storageClassName: premium-rwo
-        domain: REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME
+        domain: cb-fm-2-controller
         namespace: controllers
         yaml: |
           kind: "StatefulSet"
@@ -49,17 +49,17 @@ items:
                   - name: "SECRETS"
                     value: "/var/jenkins_home/jcasc_secrets"
                   - name: "CONTROLLER_NAME"
-                    value: "REPLACE_CONTROLLER_NAME"
+                    value: "controller"
                   - name: "GITHUB_ORGANIZATION"
-                    value: "REPLACE_GITHUB_ORG"
+                    value: "cb-fm-2"
                   - name: "GITHUB_USER"
-                    value: "REPLACE_GITHUB_USERNAME"
+                    value: "fss18"
                   - name: "GITHUB_APP"
-                    value: "REPLACE_GITHUB_APP"
+                    value: "cloudbees-ci-workshop-in-aws"
                   - name: "CONTROLLER_SUBDOMAIN"
-                    value: "REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME"
+                    value: "cb-fm-2-controller"
                   - name: "CASC_BUNDLE_ID"
-                    value: "REPLACE_FOLDER_NAME-REPLACE_CONTROLLER_NAME"
+                    value: "cb-fm-2-controller"
                   - name: "AVAILABILITY_PATTERN"
                     value: "REPLACE_AVAILABILITY_PATTERN"
                   volumeMounts:
